--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 body * {
@@ -55,13 +55,17 @@ body * {
 #container {
     width: 100%;
     max-width: 588px;
-    margin: 0px auto 0px; /* 56px */
+    margin: 0px auto 0px; /* 56px auto 0px*/
     padding: 0 24px;
+
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 #profile {
     text-align: center;
-    padding: 8px;  /* 24px */
+    padding: 24px;  /* 24px */
 }
 
 #profile img {
@@ -122,7 +126,7 @@ body * {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 24px 0;
+    padding: 24px 0 24px; /* 24px 0 */
 }
 
 .link a {
@@ -152,7 +156,7 @@ body * {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* padding: 24px 0; */
+    /* padding: -24px 0; */
 }
 
 ion-icon {
@@ -178,6 +182,8 @@ footer {
     padding: 24px;
     text-align: center;
     font-size: 14px;
+
+    margin-top: auto;
 }
 
 footer a {
